# KlippyAI

./: .env.example  .gitignore  BACKLOG.md  HOST_INSTALL.md  README.md  README.mf  install.sh  pyproject.toml  uninstall.sh
deployment/config/: klippyai.cfg.example
deployment/moonraker/: klippyai-moonraker.cfg.example
deployment/nginx/: klippyai.conf
deployment/python/: install-python310.sh
deployment/systemd/: klippyai-agent.service
docs/: architecture.md  mainsail-shell.md  python310-install.md
integrations/klipper/: install-update-macro.sh
integrations/mainsail/: README.md  apply-patch.sh  install-custom-nav.sh  navi.json.example  uninstall-custom-nav.sh
integrations/mainsail/patches/: mainsail-v2.17.0-klippyai-shell.patch
integrations/octoeverywhere/: README.md  apply-local-klippyai-route-patch.sh  install-auto-reapply.sh
src/klippyai_agent/: __main__.py  app.py  container.py  detect_profile.py  diagnostics.py  hostlogs.py  hostsystem.py  intent.py  llm.py  model_compat.py  moonraker.py  printerconfig.py  printerprofile.py  runtime_logging.py  schemas.py  services.py  sessions.py  settings.py  workflows.py
src/klippyai_agent/static/: embed.css  embed.js  standalone.css
src/klippyai_agent/templates/: embed.html  standalone.html
tests/: test_hostlogs.py  test_hostsystem.py  test_llm_config.py  test_llm_output.py  test_printerconfig.py  test_printerprofile.py  test_rules.py  test_services.py  test_sessions.py  test_settings.py  test_workflows.py
